tasks from 1 hw

--- a/python-tutorial/test.ipynb
+++ b/python-tutorial/test.ipynb
@@ -74,16 +74,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, c = (i for i in input().split())\n",
+    "print(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<generator object <genexpr> at 0x000002246F782080>"
+       "<generator object <genexpr> at 0x000002246F783640>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
